--- a/portfolio/pythonprojects/templates/pythonprojects/python.html
+++ b/portfolio/pythonprojects/templates/pythonprojects/python.html
@@ -11,19 +11,20 @@
     <div class="col-lg-4 mb-3 d-flex align-items-stretch card-marg">
       <div class="card">
         <img
-          src="{% static 'img/complain.jpg' %}"
+          src="{% static 'img/djbugs.png' %}"
           class="card-img-top mb-1"
           alt="..."
         />
         <div class="card-body d-flex flex-column">
-          <h5 class="card-title mb-3">Internet Speed Complaints</h5>
+          <h5 class="card-title mb-3">djBugs</h5>
           <p class="card-text mb-5">
-            This project was made because I pay wanted to test selenium. This
-            script logs into my twitter and tweets at comcast when my internet
-            is less than 25% of the advertised speed.
+            This project was made for educational purposes to better learn the
+            development process from start to finish. This django project is a bug
+            tracker for anyone to use that allows bugs to be assigned to projects to help
+            keep track of them for fixing. It has authentication and full crud built in.
           </p>
           <a
-            href="https://github.com/laffchem/internet_speed_complaints"
+            href="https://github.com/laffchem/bug-tracker"
             target="_blank"
             class="btn btn-custom mt-auto"
             >Github repo!</a
