--- a/portfolio/resume/templates/resume/resume.html
+++ b/portfolio/resume/templates/resume/resume.html
@@ -31,6 +31,14 @@
                         <li class="list-group-item d-flex gap-3">
                             <img src="{% static 'img/css3.png' %}" alt=""/>
                             <span><p class="list-text my-auto">CSS</p></span>
+                        </li>                        
+                        <li class="list-group-item d-flex gap-3">
+                            <img src="{% static 'img/bootstrap.png' %}" alt=""/>
+                            <span><p class="list-text my-auto">Bootstrap</p></span>
+                        </li>                        
+                        <li class="list-group-item d-flex gap-3">
+                            <img src="{% static 'img/tailwind.png' %}" alt=""/>
+                            <span><p class="list-text my-auto">Tailwind CSS</p></span>
                         </li>
                         <li class="list-group-item d-flex gap-3">
                             <img src="{% static 'img/node-js.png' %}" alt=""/>
